--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
     "version": 2,
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ],
-    "headers": [
+    "builds": [
       {
-        "source": "/(.*)",
-        "headers": [
-          { "key": "Cache-Control", "value": "public, max-age=3600" }
-        ]
+        "src": "/*",
+        "use": "@vercel/static"
       }
+    ],
+    "routes": [
+      { "src": "/.*", "dest": "/index.html" }
     ]
   }
