--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,33 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "/*",
-            "use": "@vercel/static"
-        }
+      {
+        "src": "/public/**/*", 
+        "use": "@vercel/static"
+      },
+      {
+        "src": "/*.html",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        {
-            "src": "/assets/(.*)",
-            "dest": "/public/$1",
-            "headers": {
-                "Cache-Control": "max-age=31536000"
-            }
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
+      {
+        "src": "/css/(.*)",
+        "dest": "/public/css/$1",
+        "headers": { "Cache-Control": "public, max-age=31536000" }
+      },
+      {
+        "src": "/js/(.*)",
+        "dest": "/public/js/$1",
+        "headers": { "Cache-Control": "public, max-age=31536000" }
+      },
+      {
+        "src": "/images/(.*)",
+        "dest": "/public/images/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
-}
+  }
