--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,16 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "/public/**/*", 
-        "use": "@vercel/static"
-      },
-      {
-        "src": "/*.html",
-        "use": "@vercel/static"
-      }
-    ],
     "routes": [
       {
-        "src": "public/css/(.*)",
-        "dest": "/public/css/$1",
-        "headers": { "Cache-Control": "public, max-age=31536000" }
-      },
-      {
-        "src": "public/js/(.*)",
-        "dest": "/public/js/$1",
-        "headers": { "Cache-Control": "public, max-age=31536000" }
-      },
-      {
-        "src": "./public/images/(.*)",
-        "dest": "/public/images/$1"
+        "src": "/(.*\\.(css|js|png|jpg|svg|woff2))",
+        "dest": "/public/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000, immutable"
+        }
       },
       {
         "src": "/(.*)",
-        "dest": "/index.html"
+        "dest": "/public/index.html"
       }
     ]
   }
