--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
